--- a/spec/vcr_cassettes/ExecutesStripePayment/successful_credit_card_payment/takes_the_response_from_the_gateway.yml
+++ b/spec/vcr_cassettes/ExecutesStripePayment/successful_credit_card_payment/takes_the_response_from_the_gateway.yml
@@ -8,15 +8,15 @@ http_interactions:
       string: card[number]=4242424242424242&card[exp_month]=12&card[exp_year]=2019&card[cvc]=123
     headers:
       User-Agent:
-      - Stripe/v1 RubyBindings/3.11.0
+      - Stripe/v1 RubyBindings/3.12.0
       Authorization:
       - Bearer sk_test_JYrSngeaB6dFnfYWEII1vZaD
       Content-Type:
       - application/x-www-form-urlencoded
       X-Stripe-Client-User-Agent:
-      - '{"bindings_version":"3.11.0","lang":"ruby","lang_version":"2.5.0 p0 (2017-12-25)","platform":"x86_64-darwin17","engine":"ruby","publisher":"stripe","uname":"Darwin
-        MacBook-Pro-Alexander.local 17.4.0 Darwin Kernel Version 17.4.0: Sun Dec 17
-        09:19:54 PST 2017; root:xnu-4570.41.2~1/RELEASE_X86_64 x86_64","hostname":"MacBook-Pro-Alexander.local"}'
+      - '{"bindings_version":"3.12.0","lang":"ruby","lang_version":"2.5.0 p0 (2017-12-25)","platform":"x86_64-darwin17","engine":"ruby","publisher":"stripe","uname":"Darwin
+        MacBook-Pro-Alexander.local 17.5.0 Darwin Kernel Version 17.5.0: Mon Mar  5
+        22:24:32 PST 2018; root:xnu-4570.51.1~1/RELEASE_X86_64 x86_64","hostname":"MacBook-Pro-Alexander.local"}'
       Accept-Encoding:
       - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
       Accept:
@@ -29,11 +29,11 @@ http_interactions:
       Server:
       - nginx
       Date:
-      - Sun, 01 Apr 2018 22:40:09 GMT
+      - Tue, 17 Apr 2018 12:18:53 GMT
       Content-Type:
       - application/json
       Content-Length:
-      - '779'
+      - '781'
       Connection:
       - keep-alive
       Access-Control-Allow-Credentials:
@@ -49,7 +49,7 @@ http_interactions:
       Cache-Control:
       - no-cache, no-store
       Request-Id:
-      - req_ZvoKLV5FvPeplU
+      - req_aoSiyhUpfxWbyj
       Stripe-Version:
       - '2018-02-06'
       Strict-Transport-Security:
@@ -58,10 +58,10 @@ http_interactions:
       encoding: UTF-8
       string: |
         {
-          "id": "tok_1CCEqLG9Bw4keQMb7rqNXR4r",
+          "id": "tok_1CHsltG9Bw4keQMbaDdJt84C",
           "object": "token",
           "card": {
-            "id": "card_1CCEqLG9Bw4keQMbeY0Ikx94",
+            "id": "card_1CHsltG9Bw4keQMbv7oGs41g",
             "object": "card",
             "address_city": null,
             "address_country": null,
@@ -84,33 +84,33 @@ http_interactions:
             "name": null,
             "tokenization_method": null
           },
-          "client_ip": "31.31.103.7",
-          "created": 1522622409,
+          "client_ip": "212.178.18.56",
+          "created": 1523967533,
           "livemode": false,
           "type": "card",
           "used": false
         }
     http_version: 
-  recorded_at: Sun, 01 Apr 2018 22:40:09 GMT
+  recorded_at: Tue, 17 Apr 2018 12:18:53 GMT
 - request:
     method: post
     uri: https://api.stripe.com/v1/charges
     body:
       encoding: UTF-8
-      string: amount=2500&currency=usd&source=tok_1CCEqLG9Bw4keQMb7rqNXR4r&description=&metadata[reference]=6c00482fec374a0d43d1
+      string: amount=2500&currency=usd&source=tok_1CHsltG9Bw4keQMbaDdJt84C&description=&metadata[reference]=8d1b8438752cf7e4c14c
     headers:
       User-Agent:
-      - Stripe/v1 RubyBindings/3.11.0
+      - Stripe/v1 RubyBindings/3.12.0
       Authorization:
       - Bearer sk_test_JYrSngeaB6dFnfYWEII1vZaD
       Content-Type:
       - application/x-www-form-urlencoded
       X-Stripe-Client-User-Agent:
-      - '{"bindings_version":"3.11.0","lang":"ruby","lang_version":"2.5.0 p0 (2017-12-25)","platform":"x86_64-darwin17","engine":"ruby","publisher":"stripe","uname":"Darwin
-        MacBook-Pro-Alexander.local 17.4.0 Darwin Kernel Version 17.4.0: Sun Dec 17
-        09:19:54 PST 2017; root:xnu-4570.41.2~1/RELEASE_X86_64 x86_64","hostname":"MacBook-Pro-Alexander.local"}'
+      - '{"bindings_version":"3.12.0","lang":"ruby","lang_version":"2.5.0 p0 (2017-12-25)","platform":"x86_64-darwin17","engine":"ruby","publisher":"stripe","uname":"Darwin
+        MacBook-Pro-Alexander.local 17.5.0 Darwin Kernel Version 17.5.0: Mon Mar  5
+        22:24:32 PST 2018; root:xnu-4570.51.1~1/RELEASE_X86_64 x86_64","hostname":"MacBook-Pro-Alexander.local"}'
       Idempotency-Key:
-      - 6c00482fec374a0d43d1
+      - 8d1b8438752cf7e4c14c
       Accept-Encoding:
       - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
       Accept:
@@ -123,7 +123,7 @@ http_interactions:
       Server:
       - nginx
       Date:
-      - Sun, 01 Apr 2018 22:40:11 GMT
+      - Tue, 17 Apr 2018 12:18:55 GMT
       Content-Type:
       - application/json
       Content-Length:
@@ -143,11 +143,11 @@ http_interactions:
       Cache-Control:
       - no-cache, no-store
       Idempotency-Key:
-      - 6c00482fec374a0d43d1
+      - 8d1b8438752cf7e4c14c
       Original-Request:
-      - req_KYPLEylxrfXEpS
+      - req_mwQhJnUBK5nsT7
       Request-Id:
-      - req_KYPLEylxrfXEpS
+      - req_mwQhJnUBK5nsT7
       Stripe-Version:
       - '2018-02-06'
       Strict-Transport-Security:
@@ -156,15 +156,15 @@ http_interactions:
       encoding: UTF-8
       string: |
         {
-          "id": "ch_1CCEqMG9Bw4keQMbfPSFC5XL",
+          "id": "ch_1CHsluG9Bw4keQMbkG7iSEaq",
           "object": "charge",
           "amount": 2500,
           "amount_refunded": 0,
           "application": null,
           "application_fee": null,
-          "balance_transaction": "txn_1CCEqMG9Bw4keQMb3rXnGkKm",
+          "balance_transaction": "txn_1CHsluG9Bw4keQMbBu85h79t",
           "captured": true,
-          "created": 1522622410,
+          "created": 1523967534,
           "currency": "usd",
           "customer": null,
           "description": "",
@@ -176,7 +176,7 @@ http_interactions:
           "invoice": null,
           "livemode": false,
           "metadata": {
-            "reference": "6c00482fec374a0d43d1"
+            "reference": "8d1b8438752cf7e4c14c"
           },
           "on_behalf_of": null,
           "order": null,
@@ -196,12 +196,12 @@ http_interactions:
             "data": [],
             "has_more": false,
             "total_count": 0,
-            "url": "/v1/charges/ch_1CCEqMG9Bw4keQMbfPSFC5XL/refunds"
+            "url": "/v1/charges/ch_1CHsluG9Bw4keQMbkG7iSEaq/refunds"
           },
           "review": null,
           "shipping": null,
           "source": {
-            "id": "card_1CCEqLG9Bw4keQMbeY0Ikx94",
+            "id": "card_1CHsltG9Bw4keQMbv7oGs41g",
             "object": "card",
             "address_city": null,
             "address_country": null,
@@ -231,5 +231,5 @@ http_interactions:
           "transfer_group": null
         }
     http_version: 
-  recorded_at: Sun, 01 Apr 2018 22:40:11 GMT
+  recorded_at: Tue, 17 Apr 2018 12:18:55 GMT
 recorded_with: VCR 4.0.0
