--- a/spec/vcr_cassettes/PreparesCartForStripe/successful_credit_card_payment/updates_the_ticket_status.yml
+++ b/spec/vcr_cassettes/PreparesCartForStripe/successful_credit_card_payment/updates_the_ticket_status.yml
@@ -8,15 +8,15 @@ http_interactions:
       string: card[number]=4242424242424242&card[exp_month]=12&card[exp_year]=2019&card[cvc]=123
     headers:
       User-Agent:
-      - Stripe/v1 RubyBindings/3.11.0
+      - Stripe/v1 RubyBindings/3.12.0
       Authorization:
       - Bearer sk_test_JYrSngeaB6dFnfYWEII1vZaD
       Content-Type:
       - application/x-www-form-urlencoded
       X-Stripe-Client-User-Agent:
-      - '{"bindings_version":"3.11.0","lang":"ruby","lang_version":"2.5.0 p0 (2017-12-25)","platform":"x86_64-darwin17","engine":"ruby","publisher":"stripe","uname":"Darwin
-        MacBook-Pro-Alexander.local 17.4.0 Darwin Kernel Version 17.4.0: Sun Dec 17
-        09:19:54 PST 2017; root:xnu-4570.41.2~1/RELEASE_X86_64 x86_64","hostname":"MacBook-Pro-Alexander.local"}'
+      - '{"bindings_version":"3.12.0","lang":"ruby","lang_version":"2.5.0 p0 (2017-12-25)","platform":"x86_64-darwin17","engine":"ruby","publisher":"stripe","uname":"Darwin
+        MacBook-Pro-Alexander.local 17.5.0 Darwin Kernel Version 17.5.0: Mon Mar  5
+        22:24:32 PST 2018; root:xnu-4570.51.1~1/RELEASE_X86_64 x86_64","hostname":"MacBook-Pro-Alexander.local"}'
       Accept-Encoding:
       - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
       Accept:
@@ -29,11 +29,11 @@ http_interactions:
       Server:
       - nginx
       Date:
-      - Tue, 03 Apr 2018 15:18:01 GMT
+      - Tue, 17 Apr 2018 12:19:19 GMT
       Content-Type:
       - application/json
       Content-Length:
-      - '780'
+      - '781'
       Connection:
       - keep-alive
       Access-Control-Allow-Credentials:
@@ -49,7 +49,7 @@ http_interactions:
       Cache-Control:
       - no-cache, no-store
       Request-Id:
-      - req_angU1cEtCYBP87
+      - req_nDA9yMKcdmice7
       Stripe-Version:
       - '2018-02-06'
       Strict-Transport-Security:
@@ -58,10 +58,10 @@ http_interactions:
       encoding: UTF-8
       string: |
         {
-          "id": "tok_1CCqtZG9Bw4keQMbc0AdOl4A",
+          "id": "tok_1CHsmJG9Bw4keQMbEenQQuZh",
           "object": "token",
           "card": {
-            "id": "card_1CCqtZG9Bw4keQMb2I5nAGjj",
+            "id": "card_1CHsmIG9Bw4keQMbWzGwgXyT",
             "object": "card",
             "address_city": null,
             "address_country": null,
@@ -84,12 +84,12 @@ http_interactions:
             "name": null,
             "tokenization_method": null
           },
-          "client_ip": "130.0.62.173",
-          "created": 1522768681,
+          "client_ip": "212.178.18.56",
+          "created": 1523967559,
           "livemode": false,
           "type": "card",
           "used": false
         }
     http_version: 
-  recorded_at: Tue, 03 Apr 2018 15:18:02 GMT
+  recorded_at: Tue, 17 Apr 2018 12:19:19 GMT
 recorded_with: VCR 4.0.0
